# smarter

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
smarter/: app.py  utils.py
